fixed footer z-index

--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@
  .footer {
    position: fixed;
    bottom: 0;
-   z-index: 0;
+   z-index: -1;
    background-origin: border-box
  }
 
